added modal for excel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "dataframe",
         "geopandas",
+        "hoverinfo",
         "mapbox",
         "startfile"
     ]
