added dash_plot object, updated the plotting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,37 @@
 {
     "cSpell.words": [
+        "accesstoken",
         "bigg",
+        "bordercolor",
+        "borderwidth",
+        "Claussen",
         "dataframe",
+        "Dcpt",
+        "disp",
+        "fillna",
+        "FUGRO",
         "geopandas",
         "hoverinfo",
+        "Idriss",
+        "iloc",
+        "Jamiolkowski",
+        "Lehane",
+        "Manassero",
         "mapbox",
-        "startfile"
+        "matplotlib",
+        "plotname",
+        "Presti",
+        "Qtncs",
+        "Scattermapbox",
+        "SCPG",
+        "showlegend",
+        "simga",
+        "SPACELAB",
+        "startfile",
+        "TESN",
+        "textposition",
+        "traceorder",
+        "Wride",
+        "yref"
     ]
 }
