--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ dash-bootstrap-components = "*"
 pyyaml = "*"
 pypdf2 = "*"
 openpyxl = "*"
+kaleido = "*"
+nbformat = "*"
 
 [dev-packages]
 autopep8 = "*"
