changed the package management to conda

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,36 @@
 {
     "cSpell.words": [
         "accesstoken",
+        "Alm's",
+        "arctan",
+        "asarray",
         "bigg",
         "bordercolor",
         "borderwidth",
         "Claussen",
+        "colorbar",
+        "colorscale",
         "dataframe",
         "Dcpt",
         "disp",
         "fillna",
         "FUGRO",
+        "geojsonfile",
         "geopandas",
         "hoverinfo",
         "Idriss",
         "iloc",
+        "interp",
         "Jamiolkowski",
         "Lehane",
+        "linalg",
         "Manassero",
         "mapbox",
         "matplotlib",
         "plotname",
         "Presti",
         "Qtncs",
+        "rsuffix",
         "Scattermapbox",
         "SCPG",
         "showlegend",
@@ -30,8 +39,15 @@
         "startfile",
         "TESN",
         "textposition",
+        "tickmark",
+        "tickmode",
+        "ticktext",
+        "titleside",
         "traceorder",
+        "unitcpt",
+        "voronoi",
         "Wride",
+        "yoff",
         "yref"
     ]
 }
