--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,34 @@
-beautifulsoup4==4.11.2
-Brotli @ file:///D:/bld/brotli-split_1648883782420/work
-certifi==2022.12.7
-click==7.1.2
-clr-loader==0.1.7
-dash @ file:///home/conda/feedstock_root/build_artifacts/dash_1675174399548/work
+Brotli @ file:///C:/Windows/Temp/abs_63l7912z0e/croots/recipe/brotli-split_1659616056886/work
+certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
+click @ file:///C:/ci/click_1646038595831/work
+colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
+dash @ file:///C:/b/abs_9d_k2bdhof/croot/dash_1669048389289/work
 dash-bootstrap-components @ file:///home/conda/feedstock_root/build_artifacts/dash-bootstrap-components_1679106361958/work
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-Flask==1.1.2
-Flask-Compress @ file:///home/conda/feedstock_root/build_artifacts/flask-compress_1663772969809/work
-itsdangerous==2.1.2
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1655912915439/work
-jupyter_client==7.4.9
-jupyter_core==4.12.0
-MarkupSafe @ file:///D:/bld/markupsafe_1654706097181/work
-nbclient==0.7.2
-nbconvert==7.2.10
-nest-asyncio==1.5.6
-plotly @ file:///home/conda/feedstock_root/build_artifacts/plotly_1677271849976/work
-soupsieve==2.4
-tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1677600641219/work
-tinycss2==1.2.1
-Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1651670883478/work
+distlib==0.3.6
+filelock==3.8.0
+Flask @ file:///C:/b/abs_ef16l83sif/croot/flask_1671217367534/work
+Flask-Compress @ file:///C:/b/abs_a7ii9f64l5/croot/flask-compress_1668714951742/work
+importlib-metadata @ file:///C:/b/abs_20ndzb2j6v/croot/importlib-metadata_1678997085534/work
+itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
+Jinja2 @ file:///C:/b/abs_7cdis66kl9/croot/jinja2_1666908141852/work
+MarkupSafe @ file:///C:/ci/markupsafe_1654508077284/work
+numpy==1.24.2
+pandas==1.5.3
+platformdirs==2.5.3
+plotly @ file:///C:/ci/plotly_1658142442431/work
+PyPDF2==3.0.1
+python-dateutil==2.8.2
+pytz==2022.7.1
+PyYAML==6.0
+scipy==1.10.1
+six==1.16.0
+tenacity @ file:///C:/Windows/TEMP/abs_980d07a6-8e21-4174-9c17-7296219678ads7dhdov_/croots/recipe/tenacity_1657899108023/work
+typing_extensions==4.5.0
+virtualenv==20.16.6
+virtualenv-clone==0.5.7
+Werkzeug @ file:///C:/b/abs_17q5kgb8bo/croot/werkzeug_1671216014857/work
 wincertstore==0.2
+zipp @ file:///C:/b/abs_b9jfdr908q/croot/zipp_1672387552360/work
