--- a/environment.yml
+++ b/environment.yml
@@ -3,32 +3,97 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - brotli-python=1.0.9=py37hf2a7229_7
+  - asttokens=2.2.1=pyhd8ed1ab_0
+  - autopep8=1.6.0=pyhd3eb1b0_1
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - brotli-python=1.0.9=py39hd77b12b_7
   - ca-certificates=2022.12.7=h5b45459_0
   - certifi=2022.12.7=pyhd8ed1ab_0
-  - click=7.1.2=pyh9f0ad1d_0
-  - dash=2.8.1=pyhd8ed1ab_0
+  - click=8.0.4=py39haa95532_0
+  - colorama=0.4.6=py39haa95532_0
+  - dash=2.7.0=py39haa95532_0
   - dash-bootstrap-components=1.4.1=pyhd8ed1ab_0
-  - flask=1.1.2=pyh9f0ad1d_0
-  - flask-compress=1.13=pyhd8ed1ab_0
-  - itsdangerous=2.1.2=pyhd8ed1ab_0
-  - jinja2=2.11.3=pyhd8ed1ab_2
-  - markupsafe=1.1.1=py37hcc03f2d_4
+  - debugpy=1.5.1=py39hd77b12b_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - executing=1.2.0=pyhd8ed1ab_0
+  - flask=2.2.2=py39haa95532_0
+  - flask-compress=1.13=py39haa95532_0
+  - importlib-metadata=6.0.0=py39haa95532_0
+  - importlib_metadata=6.0.0=hd8ed1ab_0
+  - ipykernel=6.15.0=pyh025b116_0
+  - ipython=8.11.0=pyh08f2357_0
+  - itsdangerous=2.0.1=pyhd3eb1b0_0
+  - jedi=0.18.2=pyhd8ed1ab_0
+  - jinja2=3.1.2=py39haa95532_0
+  - jupyter_client=8.0.3=pyhd8ed1ab_0
+  - jupyter_core=5.3.0=py39hcbf5309_0
+  - libsodium=1.0.18=h8d14728_1
+  - markupsafe=2.1.1=py39h2bbff1b_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - nest-asyncio=1.5.6=pyhd8ed1ab_0
   - openssl=1.1.1t=h2bbff1b_0
-  - pip=22.3.1=py37haa95532_0
-  - plotly=5.13.1=pyhd8ed1ab_0
-  - python=3.7.16=h6244533_0
-  - python_abi=3.7=2_cp37m
-  - setuptools=65.6.3=py37haa95532_0
+  - packaging=23.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pip=23.0.1=py39haa95532_0
+  - platformdirs=3.1.1=pyhd8ed1ab_0
+  - plotly=5.9.0=py39haa95532_0
+  - prompt-toolkit=3.0.38=pyha770c72_0
+  - prompt_toolkit=3.0.38=hd8ed1ab_0
+  - psutil=5.9.0=py39h2bbff1b_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycodestyle=2.10.0=py39haa95532_0
+  - pygments=2.14.0=pyhd8ed1ab_0
+  - python=3.9.16=h6244533_2
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pywin32=305=py39h2bbff1b_0
+  - pyzmq=23.2.0=py39hd77b12b_0
+  - setuptools=65.6.3=py39haa95532_0
+  - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.41.1=h2bbff1b_0
-  - tenacity=8.2.2=pyhd8ed1ab_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tenacity=8.0.1=py39haa95532_1
+  - toml=0.10.2=pyhd3eb1b0_0
+  - tornado=6.2=py39hb82d6ee_0
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing-extensions=4.5.0=hd8ed1ab_0
+  - typing_extensions=4.5.0=pyha770c72_0
+  - tzdata=2022g=h04d1e81_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
-  - werkzeug=2.1.2=pyhd8ed1ab_1
-  - wheel=0.38.4=py37haa95532_0
-  - wincertstore=0.2=py37haa95532_2
+  - wcwidth=0.2.6=pyhd8ed1ab_0
+  - werkzeug=2.2.2=py39haa95532_0
+  - wheel=0.38.4=py39haa95532_0
+  - wincertstore=0.2=py39haa95532_2
+  - zeromq=4.3.4=h0e60522_1
+  - zipp=3.11.0=py39haa95532_0
   - pip:
+    - attrs==22.2.0
+    - click-plugins==1.1.1
+    - cligj==0.7.2
+    - contourpy==1.0.7
+    - cycler==0.11.0
     - dash-core-components==2.0.0
     - dash-html-components==2.0.0
     - dash-table==5.0.0
+    - fiona==1.9.1
+    - fonttools==4.39.2
+    - geopandas==0.12.2
+    - importlib-resources==5.12.0
+    - kiwisolver==1.4.4
+    - matplotlib==3.7.1
+    - munch==2.5.0
+    - numpy==1.24.2
+    - pandas==1.5.3
+    - pillow==9.4.0
+    - pyparsing==3.0.9
+    - pypdf2==3.0.1
+    - pyproj==3.4.1
+    - pytz==2022.7.1
+    - pyyaml==6.0
+    - scipy==1.10.1
+    - shapely==2.0.1
 prefix: C:\ProgramData\Miniconda3\envs\unitcpt
