added doc for lateral response

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "accesstoken",
         "Alm's",
         "arctan",
+        "argprase",
         "asarray",
         "bigg",
         "bordercolor",
