aded new workflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
         "Wride",
         "yoff",
         "yref"
-    ]
+    ],
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
 }
