experimented the hmtl function

--- a/docs/makefile
+++ b/docs/makefile
@@ -3,6 +3,7 @@ ENV = C:/ProgramData/Miniconda3/envs/route11
 INTERPRETER = $(ENV)/python
 # PANDOC_OPTIONS = -s --template=eisvogel.latex --listings --number-section --filter=pandoc-citeproc
 PANDOC_OPTIONS = -s  --number-sections --citeproc --template eisvogel
+PANDOC_OPTIONS_HTML = -s  --toc --number-sections --citeproc --mathjax --template  clean_menu.html
 # PANDOC_OPTIONS = -s  --citeproc --number-sections --listing
 # PANDOC_OPTIONS = -s  --number-section --citeproc 
 # PANDOC_OPTIONS = -s --listings --number-section --citeproc --template=eisvogel.latex_ --csl=cambridge-university-press-author-date.csl
@@ -14,8 +15,7 @@ TXT_FILES = $(sort $(subst .md,.txt, $(MD_FILES)))
 
 $(info $(MD_FILES))
 $(info $(TXT_FILES))
-
-all: report.pdf
+all: report.pdf report.html
 
 
 # Define a target to execute all Python scripts
@@ -26,6 +26,13 @@ report.pdf: $(TXT_FILES)
 	pandoc $^ $(PANDOC_OPTIONS) -o $@
 	rm -f $(TXT_FILES)
 	cmd /c start $@
+
+report.html: $(TXT_FILES)
+	mkdir -p report_output
+	pandoc $^ $(PANDOC_OPTIONS_HTML) -o $@
+	rm -f $(TXT_FILES)
+	cmd /c start $@
+
 
 %.txt: %.md
 	python convert_data.py $< $@
